--- a/me.html
+++ b/me.html
@@ -49,7 +49,7 @@ a:hover {
 	<h1>プロフィール</h1>
 	<ul>
 		<li>名前:田原滉太</li>
-		<li>住所:八重瀬町</li>
+		<li>誕生日:1月20日</li>
 		<li>出身校:kbc未来高等学校(通信制)</li>
 	</ul>
 	<div class="background">
